fix word wrap (hack!)

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -55,6 +55,7 @@ a {
 
 pre {
   white-space: pre;
+  word-wrap: normal;
 }
 
 #container {
